--- a/index.html
+++ b/index.html
@@ -52,5 +52,6 @@
     </header>
     <script type="module" src="./js/barraDesplegable.js"></script>
     <script src="./js/sliderAutomatico.js"></script>
+    <script src="./js/agregarGrilla.js"></script>
 </body>
 </html>
