antes de resposive 29/11/22

--- a/html/Catalogo-Producto.html
+++ b/html/Catalogo-Producto.html
@@ -42,15 +42,15 @@
     </header>
 
     <main> 
-      <section class="contenedor__grillas">
-        <div class="grilla__Procuto">
+      <section  class="contenedor__grillas">
+        <!-- <div class="grilla__Procuto">
             <div class="img__paraGrilla" ><img class="imgGrilla" src="#"></div>
             <div class="grilla__descripcion">  Descripcion: <p class="texto__grilla-descripcion"> 
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque 
                 sunt neque quam totam sit,</p></div>
                 <h2 class="grilla__precio">Precio </h2>
             <button class="grilla__btnComprar">COMPRAR</button>
-        </div> 
+        </div>  -->
         
      
       </section>
