--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
 
     </header>
-    <script type="module" src="./js/barraDesplegable.js"></script>
+    <script  src="./js/barraDesplegable.js"></script>
     <script src="./js/sliderAutomatico.js"></script>
-    <script src="./js/agregarGrilla.js"></script>
+    <script  type="module" src="./js/agregarGrilla.js"></script>
 </body>
 </html>
