solter responsib(carrito compra css)

--- a/html/Catalogo-Producto.html
+++ b/html/Catalogo-Producto.html
@@ -16,29 +16,34 @@
 </head>
 <body>
     <header>
+        <div class="Encabezado__Menu">
+            <h3 class="Texto__Encabezado">Expertos en climatización</h3>
+        </div>
        <div class="Menu__Container">
         
         <ul class="icon__Menu">
-            <h3 class="Titulo__Menu" >Menu</h3>
             <div class="Btn__Menu"><i class="fa-solid fa-bars"></i></div>
         </ul>
         <div class="Logo__Empresa"><a href="../index.html" ><img class="Logo__Solter" src="../img/logo/logoSolter.png" ></a></div>
+        <ul class="Items__Menu">
+            <li class="Productos__Menu"><a href="#" class="Texto__Desplegable">Nosotros</a></li>
+            <li class="Productos__Menu"><a href="#" class="Texto__Desplegable Btn-Submenu">Productos</a>
+                <ul class="Submenu__Productos">
+                    <li class="Productos__Menu"><a href="../html/Catalogo-Producto.html" class="Texto__Desplegable Desplegado">Aires Acondicionados</a></li>
+                    <li class="Productos__Menu"><a href="../html/Catalogo-Producto.html" class="Texto__Desplegable Desplegado">Equipos Centrales</a></li>
+                    <li class="Productos__Menu"><a href="../html/Catalogo-Producto.html" class="Texto__Desplegable Desplegado"> repuestos</a></li>
+                </ul>
+            </li>
+            <li class="Productos__Menu"><a href="#" class="Texto__Desplegable">Contacto</a></li>        
+            </ul>
            <ul class="Btn__Barra">
                 <div class="Btn__icon Buscar"><i class="fa-solid fa-magnifying-glass"></i></div>
                 <div class="Btn__icon Carrito"><i class="fa-solid fa-cart-shopping"></i></div>
                 <div class="Btn__icon Usuario"><i class="fa-solid fa-circle-user"></i></div>
            </ul>
-        </div>
-            <ul class="Items__Menu">
-                <li class="Productos__Menu"><a href="#" class="Texto__Desplegable">Nosotros</a></li>
-                <li class="Productos__Menu"><a href="#" class="Texto__Desplegable Btn-Submenu">Productos</a>
-                    <ul class="Submenu__Productos">
-                        <li class="Productos__Menu"><a href="../html/Catalogo-Producto.html" class="Texto__Desplegable">Aires Acondicionados</a></li>
-                        <li class="Productos__Menu"><a href="../html/Catalogo-Producto.html" class="Texto__Desplegable">Equipos Centrales</a></li>
-                        <li class="Productos__Menu"><a href="../html/Catalogo-Producto.html" class="Texto__Desplegable"> repuestos</a></li>
-                    </ul>
-                </li>
-                <li class="Productos__Menu"><a href="#" class="Texto__Desplegable">Contacto</a></li>
+       </div>
+           <div class="Separador__menu"></div>
+        
     </header>
 
     <main> 
